main page fixes
main page cleared from unnecessary tasks, added themeToggle

--- a/my-site/src/styles/styles.css
+++ b/my-site/src/styles/styles.css
@@ -44,11 +44,28 @@ header, nav, .information {
 header {
     grid-area: header;
     display: flex;
+    flex-grow: 1;
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
     border-bottom: 1px solid lightgray;
 }
+
+.container_btn {
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+
+.switch-btn {
+    justify-content: flex-end;
+    margin: 0 5px;
+    height: 17px;
+    transform: rotate(90deg);
+}
+
 
 .main {
     grid-area: main;
